try to do 7th lab ready: multiprocess, half of db, fix all commands for db